[gd_scene load_steps=24 format=3 uid="uid://dkjhgfjcb0hq8"]

[ext_resource type="Script" path="res://tomate_plant.gd" id="1_dt51g"]
[ext_resource type="Texture2D" uid="uid://ccys8pq852n57" path="res://growing_plants/tomat/tomat_1.png" id="2_yeg2s"]
[ext_resource type="Texture2D" uid="uid://rwihewfdhlpt" path="res://growing_plants/tomat/tomat_2.png" id="3_8nrek"]
[ext_resource type="Texture2D" uid="uid://bnct8ipc43p4n" path="res://growing_plants/tomat/tomat_3.png" id="4_udfwu"]
[ext_resource type="Texture2D" uid="uid://bdq54i4mnsc2q" path="res://growing_plants/tomat/tomat_4.png" id="5_kqcnq"]
[ext_resource type="Texture2D" uid="uid://b4xmd2h5g3wde" path="res://growing_plants/tomat/tomat_5.png" id="6_qwksm"]
[ext_resource type="Texture2D" uid="uid://8jygy6884p1t" path="res://growing_plants/tomat/tomat_6.png" id="7_hmxfp"]
[ext_resource type="Texture2D" uid="uid://b0gkjyvadnwhp" path="res://growing_plants/tomat/tomat_7.png" id="8_ih2q8"]
[ext_resource type="Texture2D" uid="uid://bg16fivg3djsp" path="res://growing_plants/tomat/tomat_8.png" id="9_coy5p"]
[ext_resource type="Texture2D" uid="uid://28fumc2iscii" path="res://growing_plants/tomat/tomat_9.png" id="10_1c2s3"]
[ext_resource type="Texture2D" uid="uid://d3feelqfxtk0r" path="res://growing_plants/tomat/tomat_10.png" id="11_po4xy"]
[ext_resource type="Texture2D" uid="uid://c70t7igleymo2" path="res://growing_plants/tomat/tomat_11.png" id="12_58g0x"]
[ext_resource type="Texture2D" uid="uid://cajdmb8nitruu" path="res://growing_plants/tomat/tomat_12.png" id="13_icoqn"]
[ext_resource type="Texture2D" uid="uid://dv1d041nwvqp7" path="res://growing_plants/tomat/tomat_13.png" id="14_mrq3p"]
[ext_resource type="Texture2D" uid="uid://c8dhcy3mx6t7i" path="res://growing_plants/tomat/tomat_14.png" id="15_yjbvi"]
[ext_resource type="Texture2D" uid="uid://ds55r3fhs7yli" path="res://growing_plants/tomat/tomat_15.png" id="16_7cy1d"]
[ext_resource type="Texture2D" uid="uid://b4xxj0061wusw" path="res://growing_plants/tomat/tomat_16.png" id="17_tr482"]
[ext_resource type="Texture2D" uid="uid://gahnm7ljrr7b" path="res://growing_plants/tomat/tomat_17.png" id="18_b6lb7"]
[ext_resource type="Texture2D" uid="uid://dpa0b7oberq5l" path="res://growing_plants/tomat/tomat_18.png" id="19_lhmll"]
[ext_resource type="Texture2D" uid="uid://l183uu7busk7" path="res://growing_plants/tomat/tomat_19.png" id="20_tsedd"]
[ext_resource type="Texture2D" uid="uid://dur14q06atm18" path="res://growing_plants/tomat/tomat_20.png" id="21_0cp1v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_asw05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yeg2s")
}, {
"duration": 1.0,
"texture": ExtResource("3_8nrek")
}, {
"duration": 1.0,
"texture": ExtResource("4_udfwu")
}, {
"duration": 1.0,
"texture": ExtResource("5_kqcnq")
}, {
"duration": 1.0,
"texture": ExtResource("6_qwksm")
}, {
"duration": 1.0,
"texture": ExtResource("7_hmxfp")
}, {
"duration": 1.0,
"texture": ExtResource("8_ih2q8")
}, {
"duration": 1.0,
"texture": ExtResource("9_coy5p")
}, {
"duration": 1.0,
"texture": ExtResource("10_1c2s3")
}, {
"duration": 1.0,
"texture": ExtResource("11_po4xy")
}, {
"duration": 1.0,
"texture": ExtResource("12_58g0x")
}, {
"duration": 1.0,
"texture": ExtResource("13_icoqn")
}, {
"duration": 1.0,
"texture": ExtResource("14_mrq3p")
}, {
"duration": 1.0,
"texture": ExtResource("15_yjbvi")
}, {
"duration": 1.0,
"texture": ExtResource("16_7cy1d")
}, {
"duration": 1.0,
"texture": ExtResource("17_tr482")
}, {
"duration": 1.0,
"texture": ExtResource("18_b6lb7")
}, {
"duration": 1.0,
"texture": ExtResource("19_lhmll")
}, {
"duration": 1.0,
"texture": ExtResource("20_tsedd")
}, {
"duration": 1.0,
"texture": ExtResource("21_0cp1v")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_baxda"]
size = Vector2(203, 309)

[node name="tomate_plant" type="Area2D"]
script = ExtResource("1_dt51g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -1)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_asw05")
autoplay = "default"
speed_scale = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_baxda")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
